--- a/2.2_fundamentals__exercises/fundamentals_(good)_exercises.ipynb
+++ b/2.2_fundamentals__exercises/fundamentals_(good)_exercises.ipynb
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 34,
    "id": "602c8a94-b0a8-43ef-adfe-655bdb68a7c1",
    "metadata": {},
    "outputs": [
@@ -196,9 +196,52 @@
     "        elif score >= 35 and score <= 50:\n",
     "            print('C')\n",
     "        elif score >= 0 and score <= 34:\n",
-    "            print('D')\n",
+    "            print('Fail')\n",
     "except ValueError:\n",
     "    print(\"Error: Please enter a valid integer for the score.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "3882c7a4-c469-4609-b1b7-25670ca09526",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter the student's score:  85\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The student's letter grade is: A\n"
+     ]
+    }
+   ],
+   "source": [
+    "def get_grade(score):\n",
+    "    if not isinstance(score, int) or score < 0 or score > 100:\n",
+    "        return \"Invalid input. Please enter a score between 0 and 100.\"\n",
+    "    elif 70 <= score <= 100:\n",
+    "        return \"A\"\n",
+    "    elif 50 <= score <= 69:\n",
+    "        return \"B\"\n",
+    "    elif 35 <= score <= 49:\n",
+    "        return \"C\"\n",
+    "    elif 0 <= score <= 34:\n",
+    "        return \"Fail\"\n",
+    "\n",
+    "# Get user input\n",
+    "try:\n",
+    "    score = int(input(\"Enter the student's score: \"))\n",
+    "    grade = get_grade(score)\n",
+    "    print(f\"The student's letter grade is: {grade}\")\n",
+    "except ValueError:\n",
+    "    print(\"Invalid input. Please enter a valid integer score.\")\n"
    ]
   },
   {
