READY_FOR_REVIEW_fundamentals_(need)_exercises

--- a/2.2_fundamentals__exercises/fundamentals_(need)_exercises.ipynb
+++ b/2.2_fundamentals__exercises/fundamentals_(need)_exercises.ipynb
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "176d0942-56f5-4e0a-ba1a-3a3872b9ac10",
    "metadata": {},
    "outputs": [
@@ -87,7 +87,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3 4 5.0\n"
+      "3 4 5\n"
      ]
     }
    ],
@@ -95,7 +95,7 @@
     "import math\n",
     "\n",
     "x, y = 3, 4\n",
-    "z = math.sqrt(x**2 + y**2)\n",
+    "z = int(math.sqrt(x**2 + y**2))\n",
     "print(x, y, z)"
    ]
   },
@@ -114,14 +114,14 @@
    "source": [
     "|**#** |**Term**      |**Description** |\n",
     "|:---  |:---          | :---           |\n",
-    "|1     |Function      | Let's us do something in the program (recognised as input).|       \n",
+    "|1     |Function      | Let's us do a specific task in the program.|       \n",
     "|2     |Arguments     | An input/actual value passed to a function that influences its behaviour.|\n",
     "|3     |Comments      | Gives us reminders on what the code does or what some unusual numbers/letters mean.|\n",
-    "|4     |Indentations  | Tells the system which to code and which not to code.|\n",
+    "|4     |Indentations  | Used to define the structure and scope of code blocks, such as functions, loops, conditionals, and classes.|\n",
     "|5     |Packages      | Functions not pre-installed/recognised in the system's most basic form and is part of add-ons to create more complex codes.|\n",
     "|6     |.             | Represents ownership, whereby the latter function belongs to the former.|\n",
-    "|7     |:             | Is a colon and is used to designate a block of code.|\n",
-    "|8     |[]            | A type of bracket in Python and is used for listing data.|\n",
+    "|7     |:             | Is a colon and is used to designate the start of a block of code.|\n",
+    "|8     |[]            | A type of bracket in Python and is used to turn a 1D list into a 2D list.|\n",
     "|9     |[[],[]]       | A list which contains two empty lists.|\n",
     "|10    |{}            | Another type of bracket in Python used to store data in a 'thing' called a dictionary.|"
    ]
