READY_FOR_REVIEW_fundamentals_(good)_exercises

--- a/2.2_fundamentals__exercises/fundamentals_(good)_exercises.ipynb
+++ b/2.2_fundamentals__exercises/fundamentals_(good)_exercises.ipynb
@@ -189,16 +189,17 @@
     "    else:\n",
     "        print(\"The student's letter grade is: \", end='')\n",
     "        \n",
-    "        if score >= 70 and score <= 100:\n",
+    "        if score >= 70:\n",
     "            print('A')\n",
-    "        elif score >= 50 and score < 70:\n",
+    "        elif score >= 50:\n",
     "            print('B')\n",
-    "        elif score >= 35 and score <= 50:\n",
+    "        elif score >= 35:\n",
     "            print('C')\n",
-    "        elif score >= 0 and score <= 34:\n",
+    "        elif score >= 0:\n",
     "            print('Fail')\n",
+    "\n",
     "except ValueError:\n",
-    "    print(\"Error: Please enter a valid integer for the score.\")"
+    "    print(\"Error: Please enter a positive value for the score.\")"
    ]
   },
   {
