--- a/3.1_storing_data/storing_data_(good).ipynb
+++ b/3.1_storing_data/storing_data_(good).ipynb
@@ -10,12 +10,13 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "id": "c5443ba9",
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "173ed745-d806-4296-92ed-72f4b05cb45e",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "# What to expect in this chapter"
+    "import numpy as np"
    ]
   },
   {
@@ -28,6 +29,38 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "8e73e96f-3d9f-484c-bc56-9bb68cdaed08",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "py_list=[\"a1\", \"b2\", \"c3\", \"d4\", \"e5\",\n",
+    "         \"f6\", \"g7\", \"h8\", \"i9\", \"j10\"]\n",
+    "np_array=np.array(py_list)\n",
+    "\n",
+    "# Pick one\n",
+    "x = py_list  # OR\n",
+    "x = np_array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "1f97988e-600c-4338-b597-ed5b86031558",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "py_list=[\"a1\", \"b2\", \"c3\", \"d4\", \"e5\",\n",
+    "         \"f6\", \"g7\", \"h8\", \"i9\", \"j10\"]\n",
+    "np_array=np.array(py_list)\n",
+    "\n",
+    "# Pick one\n",
+    "x = py_list  # OR\n",
+    "#x = np_array"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "id": "69791872",
@@ -35,6 +68,119 @@
    "source": [
     "## 1.1 Lists & Arrays in 1D | Subsetting & Indexing"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "463fc65d-33ab-491d-926c-8d9f3b9e0405",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'c3'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x[2]              # Basic, just gives index 2. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "e6963415-8979-401d-87a6-8623c1352f1b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['c3', 'd4']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x[2:4]            # Gives 4-2=2 elements. The first element generated will be the first index so in this case, index 2 = c3. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "8b5828c1-4b06-42d4-b50b-3c030dca79b6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['c3', 'e5', 'g7']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x[2:8:2]          # Gives every other (alternate) of 8-2=6 elements"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "b37c71f5-6879-4a5c-9cee-283c92af8544",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['a1', 'c3', 'e5', 'g7']"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x[:8:2]           # Starts right at the start so 8-0=8 elements, then selects for every other (alternate) elements. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "367a38ad-4540-4c8f-aa02-27c3736b6ad2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['j10', 'i9', 'h8', 'g7', 'f6', 'e5', 'd4', 'c3', 'b2', 'a1']"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x[::-1]            # Simply reverses the entire list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3cd87b2a-8aa0-4451-8f83-4fd48a2d4e3c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "attachments": {},
@@ -46,12 +192,302 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "7c623c52-392d-4f02-b4f7-256a4d4b2999",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([False, False, False,  True,  True,  True,  True,  True,  True,\n",
+       "        True])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np_array = np.array([1, 2, 3, 4, 5, 6, 7, 8, 9, 10])\n",
+    "my_mask = np_array > 3        # Asking a qn here, what numbers are greater than 3. \n",
+    "my_mask"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5668b65b-c8f9-443d-8cc9-92b3d2940479",
+   "metadata": {},
+   "source": [
+    "### 'AND' / '&' example for addition:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "105113ae-0a10-4823-aaf7-a29b90bcdae0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([False, False, False,  True,  True,  True,  True, False, False,\n",
+       "       False])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np_array = np.array([1, 2, 3, 4, 5, 6, 7, 8, 9, 10])\n",
+    "my_mask = (np_array > 3) & (np_array < 8)\n",
+    "my_mask"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "8a3e6c37-393e-4749-9d10-9fd5bd0581f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([4, 5, 6, 7])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np_array = np.array([1, 2, 3, 4, 5, 6, 7, 8, 9, 10])\n",
+    "my_mask = (np_array > 3) & (np_array < 8)\n",
+    "np_array [my_mask]         # So here we kill off all the Falses, and the code generated will only be the True data. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2ed19b04-346b-406d-aa82-6c8355665fe9",
+   "metadata": {},
+   "source": [
+    "We can invert by adding a ~ and this will give everything that was not inside the question asked: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "fa5ad4a3-5a10-49c2-a74b-c97a705c19a6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1,  2,  3,  8,  9, 10])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np_array = np.array([1, 2, 3, 4, 5, 6, 7, 8, 9, 10])\n",
+    "my_mask = (np_array > 3) & (np_array < 8)    \n",
+    "np_array [~my_mask]                          # So here we kill off all the TRUES, and the code generated will only be the FALSES data. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "7c0d6ffa-f6ad-4368-bfdd-84e0f80267ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[25], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m np_array \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray([\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m, \u001b[38;5;241m3\u001b[39m, \u001b[38;5;241m4\u001b[39m, \u001b[38;5;241m5\u001b[39m, \u001b[38;5;241m6\u001b[39m, \u001b[38;5;241m7\u001b[39m, \u001b[38;5;241m8\u001b[39m, \u001b[38;5;241m9\u001b[39m, \u001b[38;5;241m10\u001b[39m])\n\u001b[1;32m----> 2\u001b[0m my_mask \u001b[38;5;241m=\u001b[39m np_array \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m3\u001b[39m \u001b[38;5;241m&\u001b[39m np_array \u001b[38;5;241m<\u001b[39m \u001b[38;5;241m8\u001b[39m                  \u001b[38;5;66;03m# MUST ALWAYS USE THE BRACKETS, IF NOT WILL MESS THINGS UP\u001b[39;00m\n\u001b[0;32m      3\u001b[0m np_array [my_mask]             \n",
+      "\u001b[1;31mValueError\u001b[0m: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()"
+     ]
+    }
+   ],
+   "source": [
+    "np_array = np.array([1, 2, 3, 4, 5, 6, 7, 8, 9, 10])\n",
+    "my_mask = np_array > 3 & np_array < 8                  # MUST ALWAYS USE THE BRACKETS, IF NOT WILL MESS THINGS UP\n",
+    "np_array [my_mask]             "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "489293fc-9932-4c88-8d99-869fc2f5aace",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(4)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_mask.sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ea107c0e-44ca-456f-8b69-4953a8194c11",
+   "metadata": {},
+   "source": [
+    "### 'OR' / '|' (which will show something if either mask is true):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "e7fcce91-372a-4483-b40d-11f0e213e1d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1,  2,  9, 10])"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np_array[(np_array < 3) | (np_array > 8)]          # '|' means 'OR'"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "id": "aebc6ed0",
    "metadata": {},
    "source": [
     "## 1.3 Lists & Arrays in 2D | Indexing & Slicing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "cb4f1c7f-6628-4def-9946-48afa2a711fa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "py_list_2d = [[1, \"A\"], [2, \"B\"], [3, \"C\"], [4, \"D\"],\n",
+    "              [5, \"E\"], [6, \"F\"], [7, \"G\"], [8, \"H\"],\n",
+    "              [9, \"I\"], [10, \"J\"]]\n",
+    "\n",
+    "np_array_2d = np.array(py_list_2d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "9ab17ba2-20f5-4b27-8079-a8b628b5941c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[4, 'D']"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "py_list_2d[3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "f01283d2-f043-46c4-9a8b-699c3e21925f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['4', 'D'], dtype='<U21')"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np_array_2d[3]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6b74e9f7-1d40-48cc-b4b1-f4d380be6577",
+   "metadata": {},
+   "source": [
+    "How do we only get 'D' of index 3? Here is how: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "2db977fe-b6ba-496b-a6a4-0152a4e874b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'D'"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "py_list_2d[3][1]         # Needs to split   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "a1fcbb95-b02b-4f82-af3c-265c73669279",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.str_('D')"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np_array_2d[3,1]          # Can just add , and it will work"
    ]
   },
   {
@@ -97,6 +533,63 @@
    "metadata": {},
    "source": [
     "## Footnotes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c1fb88c5-b131-45af-be67-0a89dd041a38",
+   "metadata": {},
+   "source": [
+    "To get a 3D array: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "2d68cc0f-ef84-4dee-97c1-b0f674a30a50",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = [[[1,2],[3,4]],[[2,2],[3,4]],[[5,6],[7,8]]]     # This is a 3D list\n",
+    "\n",
+    "x [0][1][1]                                         # Calling 0 is for the first list\n",
+    "                                                    # Calling the first 1 is for the second set of data in the first list (i.e [3,4])\n",
+    "                                                    # calling the second 1 is for the second value in the second set of data in the first list "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "f99ace3f-c009-4700-958b-79447d75e81d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(4)"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = [[[1,2],[3,4]],[[2,2],[3,4]],[[5,6],[7,8]]]\n",
+    "np_x = np.array(x)\n",
+    "\n",
+    "np_x [0,1,1]                                        # Getting the same answer but converting it to numpy instead. "
    ]
   }
  ],
